force-app/meta-trigger/default/objects/Trigger_Control__mdt/Trigger_Control__mdt.object-meta.xml
<CustomObject>
    <description>Controls execution of all triggers</description>
    <label>Trigger Control</label>
    <pluralLabel>Trigger Controls</pluralLabel>
</CustomObject>