force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Which Apex class this service call resides in.</description>
    <inlineHelpText>Which Apex class this service call resides in.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>