force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>DML_Operation__c</fullName>
    <description>Which trigger operation type to listen for.</description>
    <inlineHelpText>Which trigger operation type to listen for.</inlineHelpText>
    <label>DML Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <default>true</default>
                <label>BEFORE_INSERT</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>