force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this service call should execute.</description>
    <inlineHelpText>Determines if this service call should execute.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>