force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>The name of your method that begins the service call.</description>
    <inlineHelpText>The name of your method that begins the service call.</inlineHelpText>
    <label>Method Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>