force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/Order_of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Execution__c</fullName>
    <description>Controls the order in which your service calls are executed. Recommended working with 100, 200... To allow for maximum flexibility.</description>
    <inlineHelpText>Controls the order in which your service calls are executed. Recommended working with 100, 200... To allow for maximum flexibility.</inlineHelpText>
    <label>Order of Execution</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>