force-app/meta-trigger/default/objects/Trigger_Control__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Which SObject this service call is for.</description>
    <inlineHelpText>Which SObject this service call is for.</inlineHelpText>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>